namespace Misc
{
    public static class CharacterAnimatorParameter
    {
        public static string Idle = "Idle";
        public static string Run = "Run";
        public static string Victory = "Victory";
        public static string Defeat = "Defeat";
        public static string Fall = "Fall";
        public static string FallOver = "FallOver";
    }
}
